--- a/src/pages/index.html
+++ b/src/pages/index.html
@@ -13,24 +13,30 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Source+Sans+Pro:wght@300;400&display=swap" rel="stylesheet">
 
-    <link rel="stylesheet" href="/stylesheets/front_page.css">
+    <link rel="stylesheet" href="../stylesheets/index.css">
 
     <!-- font-awesome 5.15.2 CDN -->
     <script src="https://kit.fontawesome.com/5d8a1b574b.js" crossorigin="anonymous"></script>
 
-    <script src="scripts/front_page.js" defer></script>
+    <script src="../../scripts/index.js" defer></script>
 
-    <% if (scrollBottom) { %>
-        <script src="scripts/contact.js" defer></script>
-    <% } %>
+    <!-- 
+        const urlSearchParams = new URLSearchParams(window.location.search);
+        const params = Object.fromEntries(urlSearchParams.entries());
+
+        https://stackoverflow.com/questions/901115/how-can-i-get-query-string-values-in-javascript
+
+    -->
+    <script src="../../scripts/contact.js" defer></script>
+
 </head>
 <body>
     <!-- Navbar -->
     <nav>
         <ul id="navbar-list">
-            <li class="navbar-item"><a href="/">Home</a></li>
-            <li class="navbar-item"><a href="/projects">Projects</a></li>
-            <li class="navbar-item"><a href="/resume">Resume</a></li>
+            <li class="navbar-item"><a href="./index.html">Home</a></li>
+            <li class="navbar-item"><a href="./projects.html">Projects</a></li>
+            <li class="navbar-item"><a href="./resume.html">Resume</a></li>
             <li class="navbar-item" id="nav-contact"><a>Contact</a></li>
         </ul>
     </nav>
@@ -46,7 +52,7 @@
             </div>
 
             <div id="navigate-down-div" style="text-align: center;"> 
-                <img id="navigate-down-img" src="/images/arrow-down-sign-to-navigate.png">
+                <img id="navigate-down-img" src="../../public/images/arrow-down-sign-to-navigate.png">
             </div>
         </div> <!-- front-image div End-->
     </div>
@@ -55,7 +61,7 @@
     <section id="about-section">
         <div class="container">
             <h1 class="section-header" id="about-section-header">About</h1>
-            <img class="mgt-20" id="profile-picture" src="/images/profile_picture2.png">
+            <img class="mgt-20" id="profile-picture" src="../../public/images/profile_picture2.png">
             <h1 style="color: white; font-size: 36px;" >Hello!</h1>
             <p style="color: white; font-size: 24px; font-weight: 300;">
                 My name is Armando Salcido, a recent graduate from UC Irvine with a Bachelor of Science in Computer Science (2020).
@@ -77,7 +83,6 @@
         </div> <!-- Container div end-->
     </section>
 
-
     <!-- Projects Section -->
     <section id="project-section">
         <div class="container">
@@ -86,7 +91,7 @@
             <!-- Brush Demo -->
             <div class="project-showcase blurred-demo" id="project-brush">
                 <div class="demo-container">
-                    <img class="" id="brush-img" src="/gifs/homepage.gif">
+                    <img class="" id="brush-img" src="../../public/gifs/homepage.gif">
                 </div>
 
                 <div class="project-info">
@@ -102,7 +107,7 @@
             <!-- Pacman Demo -->
             <div class="project-showcase blurred-demo mgt-20" id="project-pacman-container">
                 <div class="demo-container">
-                    <img class="blurred-img" id="pacman-img" src="/gifs/gameplay.gif">
+                    <img class="blurred-img" id="pacman-img" src="../../public/gifs/gameplay.gif">
                 </div>
                 
                 <div class="project-info">
@@ -118,7 +123,7 @@
             <!-- Sudoku Solver Demo -->
             <div class="project-showcase blurred-demo mgt-20" id="project-sudoku-container">
                 <div class="demo-container">
-                    <img class="blurred-img" id="sudoku-img" src="/gifs/solve.gif">
+                    <img class="blurred-img" id="sudoku-img" src="../../public/gifs/solve.gif">
                 </div>
 
                 <div class="project-info">
@@ -131,7 +136,7 @@
             </div>
 
             <div class="view-projects-container">
-                <a id="view-projects-btn" href="/projects">View All Projects</a>
+                <a id="view-projects-btn" href="projects.html">View All Projects</a>
             </div>
              
         </div> <!-- Container div end-->
