--- a/src/pages/resume.html
+++ b/src/pages/resume.html
@@ -6,16 +6,16 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400&display=swap" rel="stylesheet">
     
-    <link rel="stylesheet" href="../stylesheets/resume.css">
+    <link rel="stylesheet" href="../../stylesheets/resume.css">
 </head>
 <body>
     <!-- Navbar -->
     <nav>
         <ul id="navbar-list">
-            <li class="navbar-item"><a href="index.html">Home</a></li>
-            <li class="navbar-item"><a href="projects.html">Projects</a></li>
-            <li class="navbar-item"><a href="resume.html">Resume</a></li>
-            <li class="navbar-item" id="nav-contact"><a href="./index.html?contact=true">Contact</a></li>
+            <li class="navbar-item"><a href="../../index.html">Home</a></li>
+            <li class="navbar-item"><a href="./projects.html">Projects</a></li>
+            <li class="navbar-item"><a href="./resume.html">Resume</a></li>
+            <li class="navbar-item" id="nav-contact"><a href="../../index.html?contact=true">Contact</a></li>
         </ul>
     </nav>
 
