--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
                 </div>
             </div>
 
-            <div id="navigate-down-div" style="text-align: center;"> 
+            <div id="navigate-down-div"> 
                 <img id="navigate-down-img" src="./public/images/arrow-down-sign-to-navigate.png">
             </div>
         </div> <!-- front-image div End-->
@@ -54,16 +54,16 @@
         <div class="container">
             <h1 class="section-header" id="about-section-header">About</h1>
             <img class="mgt-20" id="profile-picture" src="./public/images/profile_picture2.png">
-            <h1 style="color: white; font-size: 36px;" >Hello!</h1>
-            <p style="color: white; font-size: 24px; font-weight: 300;">
+            <h1 id="about-me-greeting">Hello!</h1>
+            <p id="about-me-description">
                 My name is Armando Salcido, a recent graduate from UC Irvine with a Bachelor of Science in Computer Science (2020).
                 I am a highly motivated individual and self-starter as I demonstrate in my various side projects and achievements. 
                 <br><br>
                 I have knowledge in Object Oriented Programming languages such as Python, C++, and Java. As well as JavaScript, HTML, CSS, and SQL.
                 <br><br>
-                Since graduating I have continued to improve my coding skills by creating various <a href="/projects" style="text-decoration: none; color: yellowgreen;">projects</a> 
-                available on my <a href="https://github.com/aksalcido" style="text-decoration: none; color: yellowgreen;">GitHub portfolio</a>, contributing to an Open-source project called 
-                <a href="https://github.com/PlasmaPy" style="text-decoration: none; color: yellowgreen;">PlasmaPy</a>, as well as learning different tools/frameworks such as Node.js, Express.js,
+                Since graduating I have continued to improve my coding skills by creating various <a class="about-me-outside-link" href="./src/pages/projects.html">projects</a> 
+                available on my <a class="about-me-outside-link" href="https://github.com/aksalcido">GitHub portfolio</a>, contributing to an Open-source project called 
+                <a class="about-me-outside-link" href="https://github.com/PlasmaPy">PlasmaPy</a>, as well as learning different tools/frameworks such as Node.js, Express.js,
                 MongoDB, Docker, and more. 
                 <br><br>
 
@@ -137,9 +137,9 @@
     <!-- Contact Section -->
     <section id="contact-section">
         <div class="container">
-            <h1 class="section-header" id="contact-section-header">Contact</h1>
+            <h1 class="section-header" id="contact-section-header">Contact Me</h1>
 
-            <div id="icon-container" style="text-align: center;">
+            <div id="icon-container">
                 <a href="#" id="email-icon"><i class="contact-icon fas fa-envelope"></i></a>
                 <a href="https://www.linkedin.com/in/armando-salcido-560b15176/"><i class="contact-icon fab fa-linkedin"></i></a>
                 <a href="https://github.com/aksalcido"><i class="contact-icon fab fa-github"></i></a>
@@ -149,7 +149,7 @@
     </section>
 
     <!-- Footer Section -->
-    <section class="footer" style="text-align: center; color: white;">
+    <section class="footer">
         <span>Made by Armando Salcido</span>
     </section>
 
