--- a/src/pages/resume.html
+++ b/src/pages/resume.html
@@ -12,10 +12,10 @@
     <!-- Navbar -->
     <nav>
         <ul id="navbar-list">
-            <li class="navbar-item"><a href="../../index.html">Home</a></li>
-            <li class="navbar-item"><a href="./projects.html">Projects</a></li>
-            <li class="navbar-item"><a href="./resume.html">Resume</a></li>
-            <li class="navbar-item" id="nav-contact"><a href="../../index.html?contact=true">Contact</a></li>
+            <a href="../../index.html"><li class="navbar-item">Home</li></a>
+            <a href="./projects.html"><li class="navbar-item">Projects</li></a>
+            <a href="./resume.html"><li class="navbar-item">Resume</li></a>
+            <a href="../../index.html?contact=true"><li class="navbar-item" id="nav-contact">Contact</li></a>
         </ul>
     </nav>
 
