--- a/index.html
+++ b/index.html
@@ -26,10 +26,10 @@
     <!-- Navbar -->
     <nav>
         <ul id="navbar-list">
-            <li class="navbar-item"><a href="index.html">Home</a></li>
-            <li class="navbar-item"><a href="./src/pages/projects.html">Projects</a></li>
-            <li class="navbar-item"><a href="./src/pages/resume.html">Resume</a></li>
-            <li class="navbar-item" id="nav-contact"><a>Contact</a></li>
+            <a href="index.html"><li class="navbar-item">Home</li></a>
+            <a href="./src/pages/projects.html"><li class="navbar-item">Projects</li></a>
+            <a href="./src/pages/resume.html"><li class="navbar-item">Resume</li></a>
+            <a><li class="navbar-item" id="nav-contact">Contact</li></a>
         </ul>
     </nav>
     
