Project Tab Prototype Layout

--- a/src/pages/projects.html
+++ b/src/pages/projects.html
@@ -8,7 +8,14 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400&display=swap" rel="stylesheet">
     
+    <!-- Google Font: Source Sans Pro-->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Source+Sans+Pro:wght@300;400&display=swap" rel="stylesheet">
+
     <link rel="stylesheet" href="../../stylesheets/projects.css">
+
+    <script src="../../scripts/projects.js" defer></script>
 </head>
 <body>
     <!-- Navbar -->
@@ -21,6 +28,62 @@
         </ul>
     </nav>
 
-    <h1> Projects </h1>
+    <div id="project-page-content">
+        <div class="container">
+            <!-- Project Picker -->
+            <div id="project-tabs">
+                <ul id="project-tabs-list">
+                    <li data-index="0" class="project-li active-project">Brush</li>
+                    <li data-index="1" class="project-li">Pacman</li>
+                    <li data-index="2" class="project-li">Chess/AI</li>
+                    <li data-index="3" class="project-li">Text File Analyzer</li>
+                    <li data-index="4" class="project-li">Sudoku Solver</li>
+                    <li data-index="5" class="project-li">Blackjack</li>
+                    <li data-index="6" class="project-li">Youtube-dl Wrapper</li>
+                    <li data-index="7" class="project-li">Discord Bot</li>
+                </ul>
+            </div>
+            <div>
+                <div class="project-container active-project-container">
+                    <h1 style="margin: 0;">project 1</h1>
+                </div>
+
+                <div class="project-container">
+                    <h1 style="margin: 0;">project 2</h1>
+                </div>
+
+                <div class="project-container">
+                    <h1 style="margin: 0;">project 3</h1>
+                </div>
+
+                <div class="project-container">
+                    <h1 style="margin: 0;">project 4</h1>
+                </div>
+
+                <div class="project-container">
+                    <h1 style="margin: 0;">project 5</h1>
+                </div>
+
+                <div class="project-container">
+                    <h1 style="margin: 0;">project 6</h1>
+                </div>
+
+                <div class="project-container">
+                    <h1 style="margin: 0;">project 7</h1>
+                </div>
+
+                <div class="project-container">
+                    <h1 style="margin: 0;">project 8</h1>
+                </div>
+
+
+                
+            </div>
+
+
+        </div> <!-- Container div end-->
+    </div>
+
+
 </body>
 </html>
