--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
             <h1 class="section-header" id="project-section-header">Brief Projects Teaser</h1>
             
             <!-- Brush Demo -->
-            <div class="project-showcase blurred-demo" id="project-brush">
+            <div class="project-showcase" id="project-brush">
                 <div class="demo-container">
                     <img class="" id="brush-img" src="./public/gifs/homepage.gif">
                 </div>
@@ -97,7 +97,7 @@
             </div>
             
             <!-- Pacman Demo -->
-            <div class="project-showcase blurred-demo mgt-20" id="project-pacman-container">
+            <div class="project-showcase mgt-20" id="project-pacman-container">
                 <div class="demo-container">
                     <img class="blurred-img" id="pacman-img" src="./public/gifs/gameplay.gif">
                 </div>
@@ -113,7 +113,7 @@
             </div>
 
             <!-- Sudoku Solver Demo -->
-            <div class="project-showcase blurred-demo mgt-20" id="project-sudoku-container">
+            <div class="project-showcase mgt-20" id="project-sudoku-container">
                 <div class="demo-container">
                     <img class="blurred-img" id="sudoku-img" src="./public/gifs/solve.gif">
                 </div>
