--- a/src/pages/projects.html
+++ b/src/pages/projects.html
@@ -43,7 +43,7 @@
                     <li data-index="7" class="project-li">Discord Bot</li>
                 </ul>
             </div>
-            <div>
+            <div id="projects">
                 <div class="project-container active-project-container">
                     <h1 style="margin: 0;">project 1</h1>
                 </div>
