--- a/src/pages/projects.html
+++ b/src/pages/projects.html
@@ -24,7 +24,7 @@
             <a href="../../index.html"><li class="navbar-item">Home</li></a>
             <a href="./projects.html"><li class="navbar-item">Projects</li></a>
             <a href="./resume.html"><li class="navbar-item">Resume</li></a>
-            <a href="../../index.html?contact=true"><li class="navbar-item" id="nav-contact">Contact</li></a>
+            <a href="../../index.html?#contact-section"><li class="navbar-item" id="nav-contact">Contact</li></a>
         </ul>
     </nav>
 
