About me Change, needs styling and bug fixes

--- a/src/pages/projects.html
+++ b/src/pages/projects.html
@@ -13,13 +13,18 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Source+Sans+Pro:wght@300;400&display=swap" rel="stylesheet">
 
-    <link rel="stylesheet" href="../../stylesheets/projects.css">
+    <!-- Linking Projects Stylesheet -->
+    <link rel="stylesheet" href="../../stylesheets/pages/projects.css">
 
+    <!-- Linking Components Stylesheets -->
+    <link rel="stylesheet" href="../../stylesheets/components/navbar.css">
+    
+    <!-- Linking Projects JavaScript-->
     <script src="../../scripts/projects.js" defer></script>
 </head>
 <body>
     <!-- Navbar -->
-    <nav>
+    <nav class="black-navbar">
         <ul id="navbar-list">
             <a href="../../index.html"><li class="navbar-item">Home</li></a>
             <a href="./projects.html"><li class="navbar-item">Projects</li></a>
