--- a/src/pages/resume.html
+++ b/src/pages/resume.html
@@ -6,11 +6,17 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400&display=swap" rel="stylesheet">
     
-    <link rel="stylesheet" href="../../stylesheets/resume.css">
+    <!-- Linking Resume Stylesheet -->
+    <link rel="stylesheet" href="../../stylesheets/pages/resume.css">
+
+    <!-- Linking Components Stylesheets -->
+    <link rel="stylesheet" href="../../stylesheets/components/navbar.css">
+    <link rel="stylesheet" href="../../stylesheets/components/buttons.css">
 </head>
 <body>
+    
     <!-- Navbar -->
-    <nav>
+    <nav class="black-navbar">
         <ul id="navbar-list">
             <a href="../../index.html"><li class="navbar-item">Home</li></a>
             <a href="./projects.html"><li class="navbar-item">Projects</li></a>
@@ -23,7 +29,7 @@
         <div class="container" style="text-align: center;">
             <iframe src="https://drive.google.com/file/d/1Rd58lSSnLqasOANPWcU5EpCOQ6muL0Gt/preview" width="640" height="480" allow="autoplay"></iframe>
 
-            <a class="download-btn" href="../../public/pdf/resume.pdf" download="resume">Download</a>
+            <a class="primary-btn" id="download-btn" href="../../public/pdf/resume.pdf" download="resume">Download</a>
         </div>
     </section>
 </body>
