--- a/index.html
+++ b/index.html
@@ -47,8 +47,8 @@
                 </div>
             </div>
 
-            <div id="navigate-down-div"> 
-                <i id="navigate-down-icon" class="fas fa-arrow-down"></i>
+            <div class="navigate-down-div"> 
+                <i class="fas fa-arrow-down" id="welcome-navigate"></i>
             </div>
         </div> <!-- front-image div End-->
     </div>
@@ -116,8 +116,12 @@
                     <a class="primary-btn" id="view-resume-btn" href="./src/pages/resume.html">View Resume</a>
                 </div>
             </div>
-
         </div> <!-- Container div end-->
+
+        <div class="navigate-down-div" id="about-navigate-down-div">
+            <i class="fas fa-arrow-down" id="about-navigate"></i>
+        </div>
+
     </section>
 
     <!-- Projects Section -->
