--- a/src/pages/projects.html
+++ b/src/pages/projects.html
@@ -36,18 +36,21 @@
     <div id="project-page-content">
         <div class="container">
             <!-- Project Picker -->
+            
             <div id="project-tabs">
                 <ul id="project-tabs-list">
-                    <li data-index="0" class="project-li active-project">Brush</li>
-                    <li data-index="1" class="project-li">Pacman</li>
-                    <li data-index="2" class="project-li">Chess/AI</li>
-                    <li data-index="3" class="project-li">Text File Analyzer</li>
-                    <li data-index="4" class="project-li">Sudoku Solver</li>
-                    <li data-index="5" class="project-li">Blackjack</li>
-                    <li data-index="6" class="project-li">Youtube-dl Wrapper</li>
-                    <li data-index="7" class="project-li">Discord Bot</li>
+                    <li data-index="0" class="project-li active-project"><div class="project-bg active-project-bg">Brush</div></li>
+                    <li data-index="1" class="project-li"><div class="project-bg">Pacman</div></li>
+                    <li data-index="2" class="project-li"><div class="project-bg">Chess/AI</div></li>
+                    <li data-index="3" class="project-li"><div class="project-bg">Text File Analyzer</div></li>
+                    <li data-index="4" class="project-li"><div class="project-bg">Sudoku Solver</div></li>
+                    <li data-index="5" class="project-li"><div class="project-bg">Blackjack</div></li>
+                    <li data-index="6" class="project-li"><div class="project-bg">Youtube-dl Wrapper</div></li>
+                    <li data-index="7" class="project-li"><div class="project-bg">Discord Bot</div></li>
                 </ul>
             </div>
+
+            <!-- All Projects -->
             <div id="projects">
                 <div class="project-container active-project-container">
                     <h1 style="margin: 0;">project 1</h1>
@@ -80,9 +83,6 @@
                 <div class="project-container">
                     <h1 style="margin: 0;">project 8</h1>
                 </div>
-
-
-                
             </div>
 
 
