Project-Section Template

--- a/index.html
+++ b/index.html
@@ -118,10 +118,10 @@
             </div>
         </div> <!-- Container div end-->
 
+        <!-- Navigate Down -->
         <div class="navigate-down-div" id="about-navigate-down-div">
             <i class="fas fa-arrow-down" id="about-navigate"></i>
         </div>
-
     </section>
 
     <!-- Projects Section -->
