--- a/src/pages/projects.html
+++ b/src/pages/projects.html
@@ -35,13 +35,13 @@
 
     <div id="project-page-content">
         <div class="container">
-            <!-- Project Picker -->
             
+            <!-- Project Picker -->
             <div id="project-tabs">
                 <ul id="project-tabs-list">
                     <li data-index="0" class="project-li active-project"><div class="project-bg active-project-bg">Brush</div></li>
-                    <li data-index="1" class="project-li"><div class="project-bg">Pacman</div></li>
-                    <li data-index="2" class="project-li"><div class="project-bg">Chess/AI</div></li>
+                    <li data-index="1" class="project-li"><div class="project-bg">Chess/AI</div></li>
+                    <li data-index="2" class="project-li"><div class="project-bg">Pacman</div></li>
                     <li data-index="3" class="project-li"><div class="project-bg">Text File Analyzer</div></li>
                     <li data-index="4" class="project-li"><div class="project-bg">Sudoku Solver</div></li>
                     <li data-index="5" class="project-li"><div class="project-bg">Blackjack</div></li>
@@ -49,44 +49,97 @@
                     <li data-index="7" class="project-li"><div class="project-bg">Discord Bot</div></li>
                 </ul>
             </div>
+        </div> <!-- Container div end-->
 
+        <div style="width: 50%; margin: 0 auto; text-align: center; margin-top: 20px;">
             <!-- All Projects -->
             <div id="projects">
                 <div class="project-container active-project-container">
-                    <h1 style="margin: 0;">project 1</h1>
+                    <!-- Project Title -->
+                    <h1 class="project-title">Brush</h1>
+                    <!-- Header Image -->
+                    <div class="img-container">
+                        <img class="header-image" src="../../public/images/brush/brush-welcome.png">
+                    </div>
+
+                    <p>
+                        A RESTful Web Application that allows users to draw their own art on a Javascript canvas, similar to that of a Paint application
+                        Users Can:
+                        login/register their account
+                        create/publish their art(Max 21) to the server
+                        comment on other Artwork and other User's Profile
+                        follow/unfollow other Users
+                        like/favorite Artwork
+                        Guests Can:
+                        View Homepage/Discover
+                        View Artwork/Users/Comments
+                    </p>
                 </div>
 
                 <div class="project-container">
-                    <h1 style="margin: 0;">project 2</h1>
+                    <!-- Project Title -->
+                    <h1 class="project-title">Chess/AI</h1>
+                    <!-- Header Image -->
+                    <div class="img-container">
+                        <img class="header-image" src="../../public/images/chess-ai/chess-welcome.png">
+                    </div>
                 </div>
 
                 <div class="project-container">
-                    <h1 style="margin: 0;">project 3</h1>
+                    <!-- Project Title -->
+                    <h1 class="project-title">Pacman</h1>
+                    <!-- Header Image -->
+                    <div class="img-container">
+                        <img class="header-image" src="../../public/images/pacman/pacman.png">
+                    </div>
                 </div>
 
                 <div class="project-container">
-                    <h1 style="margin: 0;">project 4</h1>
+                    <!-- Project Title -->
+                    <h1 class="project-title">Text File Analyzer</h1>
+                    <!-- Header Image -->
+                    <div class="img-container">
+                        <img class="header-image" src="../../public/images/brush/brush-welcome.png">
+                    </div>
                 </div>
 
                 <div class="project-container">
-                    <h1 style="margin: 0;">project 5</h1>
+                    <!-- Project Title -->
+                    <h1 class="project-title">Sudoku Solver</h1>
+                    <!-- Header Image -->
+                    <div class="img-container">
+                        <img class="header-image" src="../../public/images/sudoku-solver/solved.png">
+                    </div>
                 </div>
 
                 <div class="project-container">
-                    <h1 style="margin: 0;">project 6</h1>
+                    <!-- Project Title -->
+                    <h1 class="project-title">Blackjack</h1>
+                    <!-- Header Image -->
+                    <div class="img-container">
+                        <img class="header-image" src="../../public/images/blackjack/welcome.png">
+                    </div>
                 </div>
 
                 <div class="project-container">
-                    <h1 style="margin: 0;">project 7</h1>
+                    <!-- Project Title -->
+                    <h1 class="project-title">YouTube-dl Wrapper</h1>
+                    <!-- Header Image -->
+                    <div class="img-container">
+                        <img class="header-image" src="../../public/images/youtubedl-wrapper/welcome.png">
+                    </div>
                 </div>
 
                 <div class="project-container">
-                    <h1 style="margin: 0;">project 8</h1>
+                    <!-- Project Title -->
+                    <h1 class="project-title">Discord Bot</h1>
+                    <!-- Header Image -->
+                    <div class="img-container">
+                        <img class="header-image" src="../../public/images/discord-bot/c-dustin-91AQt9p4Mo8-unsplash.jpg">
+                    </div>
                 </div>
             </div>
-
-
-        </div> <!-- Container div end-->
+        </div>
     </div>
 
 
