Project Section Template

--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@
             <!-- Brush Demo -->
             <div class="project-showcase" id="project-brush">
                 <div class="demo-container">
-                    <img class="project-img" id="brush-img" src="./public/gifs/homepage.gif">
+                    <img class="project-img" id="brush-img" src="./public/gifs/brush/homepage.gif">
                 </div>
 
                 <div class="project-info">
@@ -147,7 +147,7 @@
             <!-- Pacman Demo -->
             <div class="project-showcase mgt-20" id="project-pacman-container">
                 <div class="demo-container">
-                    <img class="project-img" id="pacman-img" src="./public/gifs/gameplay.gif">
+                    <img class="project-img" id="pacman-img" src="./public/gifs/pacman/gameplay.gif">
                 </div>
                 
                 <div class="project-info">
@@ -162,7 +162,7 @@
             <!-- Sudoku Solver Demo -->
             <div class="project-showcase mgt-20" id="project-sudoku-container">
                 <div class="demo-container">
-                    <img class="project-img" id="sudoku-img" src="./public/gifs/solve.gif">
+                    <img class="project-img" id="sudoku-img" src="./public/gifs/sudoku solver/solve.gif">
                 </div>
 
                 <div class="project-info">
