Navbar and Project Resizing

--- a/index.html
+++ b/index.html
@@ -141,6 +141,9 @@
                         A Full Stack web application where users can register and sign in to their accounts to create Artwork on a JavaScript Canvas.
                         Users interact with the community by liking/favorite/commenting on Artwork and following other users                        
                     </p>
+                    <p class="project-technology">
+                        Node.js, HTML, CSS, Bootstrap 4, MongoDB, MongoDB Atlas, Heroku 
+                    </p>
                 </div>
             </div>
             
@@ -154,7 +157,10 @@
                     <h1 class="project-title">Pacman</h1>
 
                     <p class="project-description">
-                        A Python implementation of the famous Arcade game Pacman
+                        A Python implementation of the famous Arcade game Pacman using Python's graphical library tkinter for GUI and image processing library Pillow for image importing.
+                    </p>
+                    <p class="project-technology">
+                        Python, tkinter, Pillow
                     </p>
                 </div>
             </div>
@@ -169,7 +175,10 @@
                     <h1 class="project-title">Sudoku Solver</h1>
 
                     <p class="project-description">
-                        A Sudoku Solver that takes board inputs from the User on the Graphical User Interface and solves it quickly!
+                        A Classic Sudoku Solver that takes board inputs from the User on the Graphical User Interface and solves it using the Backtracking algorithm!
+                    </p>
+                    <p class="project-technology">
+                        Python, tkinter
                     </p>
                 </div>
             </div>
