Refactoring and Resizing

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
             <div id="welcome-armando">
                 <div id="welcome-content">
                     <h1 id="front-name">Armando Salcido</h1>
-                    <p id="front-description">Passionate about programming, dedicated, self-starter, and love working in a team environment</p>             
+                    <p id="front-description">Problem Solver. Passionate about programming.</p>             
                 </div>
             </div>
 
