--- a/src/pages/projects.html
+++ b/src/pages/projects.html
@@ -63,7 +63,7 @@
                     <!-- Project Title -->
                     <h1 class="project-title">Brush</h1>
                     <!-- Header Image -->
-                    <div class="img-container">
+                    <div class="img-container" id="brush-img-container">
                         <img class="header-image" src="../../public/images/brush/drawing.png">
                     </div>
 
@@ -269,7 +269,7 @@
                                 </p>
 
                                 <a title="Alexander Drichel, CC BY 3.0 &lt;https://creativecommons.org/licenses/by/3.0&gt;, via Wikimedia Commons" href="https://commons.wikimedia.org/wiki/File:Breadth-first-tree.svg">
-                                    <img width="256" alt="Breadth-first-tree" src="https://upload.wikimedia.org/wikipedia/commons/thumb/3/33/Breadth-first-tree.svg/256px-Breadth-first-tree.svg.png">
+                                    <img class="enlarge-img" alt="Breadth-first-tree" src="https://upload.wikimedia.org/wikipedia/commons/thumb/3/33/Breadth-first-tree.svg/256px-Breadth-first-tree.svg.png">
                                 </a>
                             </div>
                         </div>
@@ -395,7 +395,7 @@
                                     A representation of the algorithm can be seen below:
                                 </p>
                                 <a title="Simpsons contributor, CC BY-SA 3.0 &lt;https://creativecommons.org/licenses/by-sa/3.0&gt;, via Wikimedia Commons" href="https://commons.wikimedia.org/wiki/File:Sudoku_solved_by_bactracking.gif">
-                                    <img class="demo-img" alt="Sudoku solved by bactracking" src="https://upload.wikimedia.org/wikipedia/commons/8/8c/Sudoku_solved_by_bactracking.gif">
+                                    <img class="demo-img enlarge-img" alt="Sudoku solved by bactracking" src="https://upload.wikimedia.org/wikipedia/commons/8/8c/Sudoku_solved_by_bactracking.gif">
                                 </a>
                             </div>
                         </div>
