--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
             <div id="welcome-armando">
                 <div id="welcome-content">
                     <h1 id="front-name">Armando Salcido</h1>
-                    <p id="front-description">Problem Solver. Passionate about programming.</p>             
+                    <p id="front-description">Passionate. Problem Solver. Programmer.</p>             
                 </div>
             </div>
 
@@ -67,8 +67,8 @@
                 
                 <!-- Intro Paragraph-->
                 <p id="about-me-description">
-                    My name is Armando Salcido, a recent graduate from UC Irvine with a Bachelor of Science in Computer Science (2020).
-                    I am a highly motivated individual and self-starter as I demonstrate in my various side projects and achievements.
+                    Hello! My name is Armando Salcido, a recent graduate from UC Irvine with a Bachelor of Science in Computer Science (2020).
+                    I love programming and problem solving and I'm a highly motivated individual and self-starter as I demonstrate in my various side projects and achievements.
                     Since graduating I have continued to improve my coding skills by creating various <a class="about-me-outside-link" href="./src/pages/projects.html">projects</a> 
                     available on my <a class="about-me-outside-link" href="https://github.com/aksalcido">GitHub portfolio</a>, contributing to an Open-source project called 
                     <a class="about-me-outside-link" href="https://github.com/PlasmaPy">PlasmaPy</a>, as well as learning different tools/frameworks. Here are some of my technical skills:
@@ -109,7 +109,8 @@
             <!-- About me Conclusion and Buttons -->
             <div id="about-me-conclusion">
                 <p id="about-me-looking-for">
-                    Currently looking for an entry level position in the following: Software Engineering, Full Stack Development, or any Software related position
+                    Currently looking for an entry level position in the following: Software Engineering, Full Stack Development, Artificial Intelligence, or any Software related Position as I am eager
+                    to learn new technologies!
                 </p>
         
                 <div id="about-me-buttons">
