Project Page list-nav updated

--- a/src/pages/projects.html
+++ b/src/pages/projects.html
@@ -41,18 +41,17 @@
 
     <div id="project-page-content">
         <div class="container">
-            
             <!-- Project Picker -->
             <div id="project-tabs">
                 <ul id="project-tabs-list">
-                    <li data-index="0" class="project-li active-project"><div class="project-bg active-project-bg">Brush</div></li>
-                    <li data-index="1" class="project-li"><div class="project-bg">Chess/AI</div></li>
-                    <li data-index="2" class="project-li"><div class="project-bg">Pacman</div></li>
-                    <li data-index="3" class="project-li"><div class="project-bg">Text File Analyzer</div></li>
-                    <li data-index="4" class="project-li"><div class="project-bg">Sudoku Solver</div></li>
-                    <li data-index="5" class="project-li"><div class="project-bg">Blackjack</div></li>
-                    <li data-index="6" class="project-li"><div class="project-bg">Youtube-dl Wrapper</div></li>
-                    <li data-index="7" class="project-li"><div class="project-bg">Discord Bot</div></li>
+                    <li data-index="0" class="project-li active-project"><div class="project-bg active-project-bg">Brush 🎨</div></li>
+                    <li data-index="1" class="project-li"><div class="project-bg">Chess/AI ♟️</div></li>
+                    <li data-index="2" class="project-li"><div class="project-bg">Pacman 🕹️</div></li>
+                    <li data-index="3" class="project-li"><div class="project-bg">Text File Analyzer 📁</div></li>
+                    <li data-index="4" class="project-li"><div class="project-bg">Sudoku Solver 🧩</div></li>
+                    <li data-index="5" class="project-li"><div class="project-bg">Blackjack 🃏</div></li>
+                    <li data-index="6" class="project-li"><div class="project-bg">Youtube-dl Wrapper 📺</div></li>
+                    <li data-index="7" class="project-li"><div class="project-bg">Discord Bot 👾</div></li>
                 </ul>
             </div>
 
@@ -61,7 +60,7 @@
                 <!-- ========== Brush ========== -->
                 <div class="project-container active-project-container">
                     <!-- Project Title -->
-                    <h1 class="project-title">Brush</h1>
+                    <h1 class="project-title">Brush 🎨</h1>
                     <!-- Header Image -->
                     <div class="img-container" id="brush-img-container">
                         <img class="header-image" src="../../public/images/brush/drawing.png">
@@ -157,7 +156,7 @@
                 <!-- ========== Chess/AI ========== -->
                 <div class="project-container">
                     <!-- Project Title -->
-                    <h1 class="project-title">Chess/AI</h1>
+                    <h1 class="project-title">Chess/AI ♟️</h1>
                     <!-- Header Image -->
                     <div class="img-container">
                         <img class="header-image" src="../../public/images/chess-ai/chess-welcome.png">
@@ -223,7 +222,7 @@
                 <!-- ========== Pacman ========== -->
                 <div class="project-container">
                     <!-- Project Title -->
-                    <h1 class="project-title">Pacman</h1>
+                    <h1 class="project-title">Pacman 🕹️</h1>
                     <!-- Header Image -->
                     <div class="img-container">
                         <img class="header-image" src="../../public/images/pacman/gameplay.png">
@@ -295,7 +294,7 @@
                 <!-- ========== Text File Analyzer ========== -->
                 <div class="project-container">
                     <!-- Project Title -->
-                    <h1 class="project-title">Text File Analyzer</h1>
+                    <h1 class="project-title">Text File Analyzer 📁</h1>
                     <!-- Header Image -->
                     <div class="img-container">
                         <img class="header-image" src="../../public/images/text-analyzer/program.png">
@@ -358,7 +357,7 @@
                 <!-- ========== Sudoku Solver ========== -->
                 <div class="project-container">
                     <!-- Project Title -->
-                    <h1 class="project-title">Sudoku Solver</h1>
+                    <h1 class="project-title">Sudoku Solver 🧩</h1>
                     <!-- Header Image -->
                     <div class="img-container">
                         <img class="header-image" src="../../public/images/sudoku-solver/solved.png">
@@ -421,7 +420,7 @@
                 <!-- ========== Blackjack ========== -->
                 <div class="project-container">
                     <!-- Project Title -->
-                    <h1 class="project-title">Blackjack</h1>
+                    <h1 class="project-title">Blackjack 🃏</h1>
                     <!-- Header Image -->
                     <div class="img-container">
                         <img class="header-image" src="../../public/images/blackjack/gameplay.png">
@@ -482,7 +481,7 @@
                 <!-- ========== YouTube-dl Wrapper ========== -->
                 <div class="project-container">
                     <!-- Project Title -->
-                    <h1 class="project-title">YouTube-dl Wrapper</h1>
+                    <h1 class="project-title">YouTube-dl Wrapper 📺</h1>
                     <!-- Header Image -->
                     <div class="img-container">
                         <img class="header-image" src="../../public/images/youtubedl-wrapper/welcome.png">
@@ -543,7 +542,7 @@
                 <!-- ========== Discord Bot ========== -->
                 <div class="project-container">
                     <!-- Project Title -->
-                    <h1 class="project-title">Discord Bot (In Development)</h1>
+                    <h1 class="project-title">Discord Bot (In Development) 👾</h1>
                     <!-- Header Image -->
                     <div class="img-container">
                         <img class="header-image" src="../../public/images/discord-bot/c-dustin-91AQt9p4Mo8-unsplash.jpg">
