Email Redirection Fix and Website Title icon

--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
+    <link rel="shortcut icon" href="./public/images/profile_picture.ico"/>
     <title>Armando Salcido's Website</title>
 
     <!-- Google Font: Open Sans -->
@@ -199,7 +200,7 @@
 
             <div id="icon-container">
                 <!-- Email Icon -->
-                <div><a href="#" id="email-icon"><i class="contact-icon fas fa-envelope"></i></a></div>
+                <div><a id="email-icon"><i class="contact-icon fas fa-envelope"></i></a></div>
                 <!-- LinkedIn Icon-->
                 <div><a href="https://www.linkedin.com/in/armando-salcido-560b15176/"><i class="contact-icon fab fa-linkedin"></i></a></div>
                 <!-- GitHub Icon -->
