--- a/src/pages/projects.html
+++ b/src/pages/projects.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
+    <link rel="shortcut icon" href="../../public/images/profile_picture.ico"/>
     <title>Projects</title>
     
     <!-- Google Font:Open Sans -->
