--- a/src/pages/resume.html
+++ b/src/pages/resume.html
@@ -1,6 +1,9 @@
 <!DOCTYPE html>
 <html>
 <head>
+    <link rel="shortcut icon" href="../../public/images/profile_picture.ico"/>
+    <title>Resume</title>
+
     <!-- Google Font:Open Sans -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
