--- a/index.html
+++ b/index.html
@@ -4,6 +4,10 @@
     <link rel="shortcut icon" href="./public/images/profile_picture.ico"/>
     <title>Armando Salcido's Website</title>
 
+    <meta property='og:title' content="Armando's Personal Website"/>
+    <meta property='og:image' content="./public/images/profile_picture.png"/>
+    <meta property='og:description' content="Personal Website for Armando Salcido that also is a Portfolio"/>
+
     <!-- Google Font: Open Sans -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
