--- a/index.html
+++ b/index.html
@@ -1,12 +1,15 @@
 <!DOCTYPE html>
-<html>
+<html lang=”en" prefix="og: https://ogp.me/ns#">
 <head>
     <link rel="shortcut icon" href="./public/images/profile_picture.ico"/>
     <title>Armando Salcido's Website</title>
 
-    <meta property='og:title' content="Armando's Personal Website"/>
-    <meta property='og:image' content="./public/images/profile_picture.png"/>
-    <meta property='og:description' content="Personal Website for Armando Salcido that also is a Portfolio"/>
+    <!-- Meta Data -->
+    <meta property=”og:title” content="Armando's Personal Website"/>
+    <meta name=”image” property=”og:image” content="./public/images/profile_picture.png"/>
+    <meta name=”author” content="Armando Salcido"/>
+    <meta property=”og:description” content="Personal Website for Armando Salcido that also is a Portfolio"/>
+    <meta property=”og:url” content="https://armandosalcido.com/">
 
     <!-- Google Font: Open Sans -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
