Back to Top Btns

--- a/index.html
+++ b/index.html
@@ -219,7 +219,14 @@
 
     <!-- Footer Section -->
     <section class="footer">
-        <span>Made by Armando Salcido</span>
+        <!-- Credits for Website -->
+        <div class="credits">
+            <span>Made by Armando Salcido</span>
+        </div>
+        <!-- Button to navigate to top of page-->
+        <div>
+            <a class="top-btn">Back to the top <i class="fas fa-arrow-up"></i></a>
+        </div>
     </section>
 </body>
 </html>
