--- a/src/pages/projects.html
+++ b/src/pages/projects.html
@@ -56,6 +56,9 @@
                 </ul>
             </div>
 
+            <!-- Button to navigate to top of page-->
+            <a class="top-btn top-btn-fixed"><i class="fas fa-arrow-up"></i></a>
+
             <!-- All Projects -->
             <div id="projects">
                 <!-- ========== Brush ========== -->
@@ -567,11 +570,9 @@
 
                     </div> <!-- Project Demo Div End -->
                 </div> <!-- Discord Project Div End -->
+            
             </div> <!-- Projects div end-->
-
         </div> <!-- Container div end-->
     </div>
-
-
 </body>
 </html>
